--- a/templates/tce-1105/actual/confirmationpage.html
+++ b/templates/tce-1105/actual/confirmationpage.html
@@ -548,7 +548,7 @@
       </nav>
     </div>
 
-    <a class="nhsuk-button " href="/">Return to homepage </a>
+    <a class="nhsuk-button nhsuk-button--secondary" href="/update-index">Return to homepage </a>
 
 
 </div>
