--- a/templates/tce-1105/tariff/confirm.html
+++ b/templates/tce-1105/tariff/confirm.html
@@ -14,8 +14,8 @@
     <h1 class="heading-xlarge">Generics Part IX Quick Price Update</h1>
 
     <div class="nhsuk-body-m flex--space-between">
-      <div class="nhsuk-u-visually-hidden">Currently viewing</div>
-      <div id="pageAndResultCount">Page 1 of 1 (2 results)</div>
+      <!--div class="nhsuk-u-visually-hidden">Currently viewing</div>
+      <div id="pageAndResultCount">Page 1 of 1 (2 results)</div-->
       <div class="nhsuk-u-text-align--right" style="display: flex">
         <div id="tableSortControls" style="margin-right: 15px">
           <span>Sort:</span>
@@ -133,37 +133,9 @@
       </tbody>
     </table>
 
-    <div id="pagination">
-      <nav aria-label="Pagination Navigation">
-        <ul class="pagination">
-          <!-- Previous Button -->
-          <li class="pagination__item">Previous</li>
-          <li class="pagination__item">|</li>
-          <!-- First Page -->
-          <!-- Page Numbers -->
-          <li class="pagination__item">
-            <!-- Not this page! -->
-            <!-- This page! -->
-            <p class="pagination__link nhsuk-u-font-weight-bold" aria-current="true" id="1">1</p>
-          </li>
-          <li class="pagination__item">
-            <!-- Not this page! -->
-            <a class="pagination__link" href="/cdr-client/vtm?execution=e1s10&amp;_eventId=viewPage&amp;pageNumber=2" id="2">2</a>
-            <!-- This page! -->
-          </li>
 
-          <!-- Next Page -->
 
-          <li class="pagination__item">|</li>
-
-          <!-- Next Button -->
-          <li class="pagination__item"><a href="/cdr-client/vtm?execution=e1s10&amp;_eventId=viewPage&amp;pageNumber=2">Next</a></li>
-
-        </ul>
-      </nav>
-    </div>
-
-    <a class="nhsuk-button" href="../portal.html">Submit</a>
+    <a class="nhsuk-button" href="confirmationpage.html">Submit</a>
   </div>
 </div>
 {% endblock %}
