--- a/templates/tce-1105/tariff/search.html
+++ b/templates/tce-1105/tariff/search.html
@@ -454,8 +454,8 @@
 
 
     <div class="nhsuk-body-m flex--space-between">
-      <div class="nhsuk-u-visually-hidden">Currently viewing</div>
-      <div id="pageAndResultCount">Page 1 of 1 (5 results)</div>
+      <!--div class="nhsuk-u-visually-hidden">Currently viewing</div>
+      <div id="pageAndResultCount">Page 1 of 1 (5 results)</div-->
       <div class="nhsuk-u-text-align--right" style="display: flex">
         <div id="tableSortControls" style="margin-right: 15px">
           <span>Sort:</span>
@@ -891,35 +891,7 @@
 
     </table>
 
-    <div id="pagination">
-      <nav aria-label="Pagination Navigation">
-        <ul class="pagination">
-          <!-- Previous Button -->
-          <li class="pagination__item">Previous</li>
-          <li class="pagination__item">|</li>
-          <!-- First Page -->
-          <!-- Page Numbers -->
-          <li class="pagination__item">
-            <!-- Not this page! -->
-            <!-- This page! -->
-            <p class="pagination__link nhsuk-u-font-weight-bold" aria-current="true" id="1">1</p>
-          </li>
-          <li class="pagination__item">
-            <!-- Not this page! -->
-            <a class="pagination__link" href="#" id="2">2</a>
-            <!-- This page! -->
-          </li>
 
-          <!-- Next Page -->
-
-          <li class="pagination__item">|</li>
-
-          <!-- Next Button -->
-          <li class="pagination__item"><a href="#">Next</a></li>
-
-        </ul>
-      </nav>
-    </div>
 
     <a class="nhsuk-button" onclick="goToSelections()" id="continue-button"
        href="../tariff/confirm.html">Continue</a>
