--- a/templates/part-8a/changes-saved-proprietary.html
+++ b/templates/part-8a/changes-saved-proprietary.html
@@ -405,7 +405,7 @@
 
 
 
-        <a class="nhsuk-button nhsuk-button--secondary" href="/" role="button" draggable="false">Return to homepage</a>
+        <a class="nhsuk-button nhsuk-button--secondary" href="/update-index" role="button" draggable="false">Return to homepage</a>
 
 
 
