--- a/templates/part-8b/changes-saved.html
+++ b/templates/part-8b/changes-saved.html
@@ -22,7 +22,7 @@
         <p>You have successfully updated prices for five hundred and sixty (560) VMPPs</p>
 
 
-        <a class="nhsuk-button nhsuk-button--secondary" href="/" role="button" draggable="false">Return to homepage</a>
+        <a class="nhsuk-button nhsuk-button--secondary" href="/update-index" role="button" draggable="false">Return to homepage</a>
         <table role="table" class="nhsuk-table-responsive">
           <caption class="nhsuk-table__caption nhsuk-u-visually-hidden">Updated prices for Sandoz Ltd</caption>
           <thead role="rowgroup" class="nhsuk-table__head">
