--- a/templates/tce-1105/actual/search.html
+++ b/templates/tce-1105/actual/search.html
@@ -569,8 +569,8 @@
     </div>
 
     <div class="nhsuk-body-m flex--space-between">
-      <div class="nhsuk-u-visually-hidden">Currently viewing</div>
-      <div id="pageAndResultCount">Page 1 of 1 (10 results)</div>
+      <!--div class="nhsuk-u-visually-hidden">Currently viewing</div>
+      <div id="pageAndResultCount">Page 1 of 1 (10 results)</div-->
       <div class="nhsuk-u-text-align--right" style="display: flex">
         <div id="tableSortControls" style="margin-right: 15px">
           <span>Sort:</span>
@@ -1317,35 +1317,6 @@
 <!--      </tbody>-->
     </table>
 
-    <div id="pagination">
-      <nav aria-label="Pagination Navigation">
-        <ul class="pagination nhsuk-u-margin-bottom-0">
-          <!-- Previous Button -->
-          <li class="pagination__item">Previous</li>
-          <li class="pagination__item">|</li>
-          <!-- First Page -->
-          <!-- Page Numbers -->
-          <li class="pagination__item">
-            <!-- Not this page! -->
-            <!-- This page! -->
-            <p class="pagination__link nhsuk-u-font-weight-bold" aria-current="true" id="1">1</p>
-          </li>
-          <li class="pagination__item">
-            <!-- Not this page! -->
-            <a class="pagination__link" href="/cdr-client/vtm?execution=e1s10&amp;_eventId=viewPage&amp;pageNumber=2" id="2">2</a>
-            <!-- This page! -->
-          </li>
-
-          <!-- Next Page -->
-
-          <li class="pagination__item">|</li>
-
-          <!-- Next Button -->
-          <li class="pagination__item"><a href="/cdr-client/vtm?execution=e1s10&amp;_eventId=viewPage&amp;pageNumber=2">Next</a></li>
-
-        </ul>
-      </nav>
-    </div>
 
     <a class="nhsuk-button" href="date-amend-yes-or-no">Continue</a>
   </div>
