--- a/templates/part-8a/confirm-changes-generic.html
+++ b/templates/part-8a/confirm-changes-generic.html
@@ -20,6 +20,52 @@
 
         <h1>Confirm changes</h1>
         <p>Review the changes made to the updated prices and dates</p>
+
+        <div>
+          <h2>Reimbursement dates</h2>
+          <dl class="nhsuk-summary-list">
+  
+    
+            <div class="nhsuk-summary-list__row">
+              <dt class="nhsuk-summary-list__key">Drug Tariff Date&nbsp;</dt>
+              <dd class="nhsuk-summary-list__value">March 2025 &nbsp; &nbsp; &nbsp;</dd>
+              
+                <dd class="nhsuk-summary-list__actions">
+                  
+                    <a href="./effective-date-generic.html">
+                        Change date<span class="nhsuk-u-visually-hidden"> name</span>
+                        </a>
+                  
+                </dd>
+              
+            </div>
+            
+
+          
+            
+            <div class="nhsuk-summary-list__row">
+              <dt class="nhsuk-summary-list__key">Generic Reimbursement Date &nbsp; &nbsp; &nbsp;</dt>
+              <dd class="nhsuk-summary-list__value">March 2025</dd>
+              
+                <dd class="nhsuk-summary-list__actions">
+                  
+                    <a href="./effective-date-generic.html">
+                        Change date<span class="nhsuk-u-visually-hidden"> contact information</span>
+                        </a>
+                  
+                </dd>
+              
+            </div>
+            
+          
+            
+            
+            
+          
+        </dl>
+
+
+        </div>
         <div>
           <h2>Updated drug prices for Sandoz Ltd</h2>
           <div class="nhsuk-body-m flex--space-between">
@@ -377,38 +423,6 @@
         </div>
 <br>
 <br>
-
-        <div>
-          <h2>Reimbursement Dates</h2>
-          <div class="nhsuk-form-group">
-            <label class="nhsuk-label" for="select-1">
-              Drug Tariff Date
-            </label>
-            <select class="nhsuk-select" id="select-1" name="select-1">
-              <option value="1">December 2024</option>
-              <option value="2">January 2025</option>
-              <option value="3">February 2025</option>
-              <option value="3" selected>March 2025</option>
-              <option value="3">April 2025</option>
-            </select>
-          </div>
-
-
-          <div class="nhsuk-form-group">
-            <label class="nhsuk-label" for="select-1">
-              Generic name Reimbursement Date
-            </label>
-            <select class="nhsuk-select" id="select-1" name="select-1">
-              <option value="1" selected>December 2024</option>
-              <option value="2">January 2025</option>
-              <option value="3">February 2025</option>
-              <option value="3">March 2025</option>
-              <option value="3">April 2025</option>
-            </select>
-          </div>
-
-
-        </div>
 
 
 
