--- a/templates/part-8a/index.html
+++ b/templates/part-8a/index.html
@@ -19,48 +19,52 @@
       <div class="nhsuk-grid-column-full">
 
         <h1>Part VIIIA - Quick price update</h1>
+       
+        <h2>Search for a supplier</h2>
         <p>Use the parameters below to search for corresponding drugs that need updating.</p>
 
         <div class="custom-filter nhsuk-grid-column-full nhsuk-u-padding-left-0">
 
 
-          <div class="nhsuk-grid-column-one-quarter nhsuk-u-padding-left-0"><!--Start date-->
-            <div class="nhsuk-form-group">
-              <label class="nhsuk-label" for="input-width-10">
+
+          <div class="nhsuk-form-group nhsuk-u-padding-left-0">
+            <legend class="nhsuk-fieldset__legend">
+              <p class="nhsuk-fieldset__heading">
                 Start date
-              </label>
-              <input class="nhsuk-input nhsuk-input--width-10" id="input-width-10" name="test-width-10" type="text">
+              </p>
+            </legend>
+            <div class="nhsuk-date-input" id="example">
+              <div class="nhsuk-date-input__item">
+                <div class="nhsuk-form-group">
+                  <label class="nhsuk-label nhsuk-date-input__label" for="example-day">
+                    Day
+                  </label>
+                  <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="example-day" name="example[day]"
+                    type="text" inputmode="numeric">
+                </div>
+              </div>
+              <div class="nhsuk-date-input__item">
+                <div class="nhsuk-form-group">
+                  <label class="nhsuk-label nhsuk-date-input__label" for="example-month">
+                    Month
+                  </label>
+                  <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="example-month" name="example[month]"
+                    type="text" inputmode="numeric">
+                </div>
+              </div>
+              <div class="nhsuk-date-input__item">
+                <div class="nhsuk-form-group">
+                  <label class="nhsuk-label nhsuk-date-input__label" for="example-year">
+                    Year
+                  </label>
+                  <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4" id="example-year" name="example[year]"
+                    type="text" inputmode="numeric">
+                </div>
+              </div>
             </div>
           </div>
 
-          <!--div class="nhsuk-grid-column-one-third nhsuk-u-padding-left-0"><div class="nhsuk-date-input" id="example">
-            <div class="nhsuk-date-input__item">
-              <div class="nhsuk-form-group">
-                <label class="nhsuk-label nhsuk-date-input__label" for="example-day">
-                  Day
-                </label>
-                <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="example-day" name="example[day]" type="text" inputmode="numeric">
-              </div>
-            </div>
-            <div class="nhsuk-date-input__item">
-              <div class="nhsuk-form-group">
-                <label class="nhsuk-label nhsuk-date-input__label" for="example-month">
-                  Month
-                </label>
-                <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="example-month" name="example[month]" type="text" inputmode="numeric">
-              </div>
-            </div>
-            <div class="nhsuk-date-input__item">
-              <div class="nhsuk-form-group">
-                <label class="nhsuk-label nhsuk-date-input__label" for="example-year">
-                  Year
-                </label>
-                <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4" id="example-year" name="example[year]" type="text" inputmode="numeric">
-              </div>
-            </div>
-          </div></div-->
-
-          <div class="nhsuk-grid-column-one-quarter nhsuk-u-padding-left-0"><!--Supplier-->
+          <div class="nhsuk-u-padding-left-0"><!--Supplier-->
             <div class="nhsuk-form-group">
               <label class="nhsuk-label" for="input-width-10">
                 Supplier
@@ -74,7 +78,7 @@
 
 
           <div
-          class="nhsuk-form-group nhsuk-grid-column-one-quarter nhsuk-u-margin-right-2 nhsuk-u-padding-left-1 nhsuk-u-padding-right-1 nhsuk-u-margin-bottom-0">
+          class="nhsuk-form-group">
           <label class="nhsuk-label" for="pit">
             PIT
           </label>
@@ -86,7 +90,7 @@
         </div>
 
           <div
-          class="nhsuk-form-group nhsuk-u-padding-left-3 nhsuk-u-padding-right-1 nhsuk-u-margin-bottom-0">
+          class="nhsuk-form-group ">
 
           <label class="nhsuk-label" for="select-1">
             Product type
