changing button to pagination

--- a/templates/tce-1105/portal.html
+++ b/templates/tce-1105/portal.html
@@ -15,7 +15,7 @@
 
     <div class="nhsuk-grid-row">
       <div class="nhsuk-grid-column-one-half nhsuk-section__content">
-        <h2 id="sub-heading-generics" class="hero-margin-fix">Tariff (VMPP)</h2>
+        <h2 id="sub-heading-generics" class="hero-margin-fix">Part IX Generics (VMPP)</h2>
         <p id="generics-description">Generics Quick Price Update</p>
         <div class="nhsuk-action-link">
           <a id="generic-link" class="nhsuk-action-link__link" href="tariff/search">
@@ -29,7 +29,7 @@
       </div>
 
       <div class="nhsuk-grid-column-one-half nhsuk-section__content">
-        <h2 id="sub-heading-branded" class="hero-margin-fix">Actual (AMPP)</h2>
+        <h2 id="sub-heading-branded" class="hero-margin-fix"> Part IX Supplier Products (AMPP)</h2>
         <p id="insert-branded-description">Branded Quick Price Update</p>
         <div class="nhsuk-action-link">
           <a id="branded-link" class="nhsuk-action-link__link" href="actual/search-supplier.html">
