--- a/templates/tce-2226/vtm-display-maxdisplay.html
+++ b/templates/tce-2226/vtm-display-maxdisplay.html
@@ -21,7 +21,7 @@
                 <h2 class="nhsuk-heading-l nhsuk-u-visually-hidden">Navigation</h2>
                 <ul class="nhsuk-list">
                     <li><a href="#nameDetails">Name Details</a></li>
-                 
+
                     <li><a href="#productCodes">Codes</a></li>
                     <li><a href="#ingredients">Ingredients details</a></li>
                     <li><a href="#vtmVmps">Virtual Medicinal Products (VMPs)</a></li>
@@ -184,51 +184,101 @@
                 <div>
                     <section id="ingredients">
                         <h2 class="nhsuk-heading-l">Ingredient details</h2>
+
+                        <div class="nhsuk-body-m flex--space-between">
+                            <div class="nhsuk-u-visually-hidden">Currently viewing </div>
+                            <div id="pageAndResultCount">Page 1 of 3 - 44 total results</div>
+                            <div class="nhsuk-u-text-align--right">
+                                <!--   TODO Setup formData parameter handling   -->
+
+                                <div>
+                                    <span>Page size:</span>
+                                    <span class="nhsuk-u-font-weight-bold">20</span>
+
+
+                                    <a
+                                        href="http://dmd-browser.nhsbsa.nhs.uk/vtm/view/69?ref=YW1wTmFtZT1hc3BpcmluJnNlYXJjaFR5cGU9VlRNJnNob3dJbnZhbGlkSXRlbXM9ZmFsc2UmaGlkZVBhcmFsbGVsSW1wb3J0PWZhbHNlJmhpZGVTcGVjaWFsT3JkZXI9ZmFsc2UmaGlkZURpc2NvbnRpbnVlZEl0ZW1zPWZhbHNl&amp;size=50">50</a>
+
+                                    <a
+                                        href="http://dmd-browser.nhsbsa.nhs.uk/vtm/view/69?ref=YW1wTmFtZT1hc3BpcmluJnNlYXJjaFR5cGU9VlRNJnNob3dJbnZhbGlkSXRlbXM9ZmFsc2UmaGlkZVBhcmFsbGVsSW1wb3J0PWZhbHNlJmhpZGVTcGVjaWFsT3JkZXI9ZmFsc2UmaGlkZURpc2NvbnRpbnVlZEl0ZW1zPWZhbHNl&amp;size=100">100</a>
+                                </div>
+                            </div>
+                        </div>
                         <table class="nhsuk-table nhsuk-u-margin-bottom-4">
-                        
+
                             <thead role="rowgroup" class="nhsuk-table__head">
-                              <tr role="row">
-                                <th role="columnheader" class="" scope="col">
-                                  Name
-                                </th>
-                                <th role="columnheader" class="" scope="col">
-                                  Invalid
-                                </th>
-                              </tr>
+                                <tr role="row">
+                                    <th role="columnheader" class="" scope="col">
+                                        Name
+                                    </th>
+                                    <th role="columnheader" class="" scope="col">
+                                        Invalid
+                                    </th>
+                                </tr>
                             </thead>
                             <tbody class="nhsuk-table__body">
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell"><a href="/">Danish serotype 1 capsular polysaccharide (substance)</a></td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell"><a href="/">Danish serotype 10A capsular polysaccharide (substance)</a></td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell"><a href="/">Danish serotype 11A capsular polysaccharide (substance)</a></td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell"><a href="/">Danish serotype 12F capsular polysaccharide (substance)</a></td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell"><a href="/">Danish serotype 14 capsular polysaccharide (substance)</a></td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                              <tr role="row" class="nhsuk-table__row">
-                                <td class="nhsuk-table__cell"><a href="/">Danish serotype 15B capsular polysaccharide (substance)</a></td>
-                                <td class="nhsuk-table__cell "> </td>
-                              </tr>
-                             
-                              
+                                <tr role="row" class="nhsuk-table__row">
+                                    <td class="nhsuk-table__cell"><a href="/">Danish serotype 1 capsular polysaccharide
+                                            (substance)</a></td>
+                                    <td class="nhsuk-table__cell "> </td>
+                                </tr>
+                                <tr role="row" class="nhsuk-table__row">
+                                    <td class="nhsuk-table__cell"><a href="/">Danish serotype 10A capsular
+                                            polysaccharide (substance)</a></td>
+                                    <td class="nhsuk-table__cell "> </td>
+                                </tr>
+                                <tr role="row" class="nhsuk-table__row">
+                                    <td class="nhsuk-table__cell"><a href="/">Danish serotype 11A capsular
+                                            polysaccharide (substance)</a></td>
+                                    <td class="nhsuk-table__cell "> </td>
+                                </tr>
+                                <tr role="row" class="nhsuk-table__row">
+                                    <td class="nhsuk-table__cell"><a href="/">Danish serotype 12F capsular
+                                            polysaccharide (substance)</a></td>
+                                    <td class="nhsuk-table__cell "> </td>
+                                </tr>
+                                <tr role="row" class="nhsuk-table__row">
+                                    <td class="nhsuk-table__cell"><a href="/">Danish serotype 14 capsular polysaccharide
+                                            (substance)</a></td>
+                                    <td class="nhsuk-table__cell "> </td>
+                                </tr>
+                                <tr role="row" class="nhsuk-table__row">
+                                    <td class="nhsuk-table__cell"><a href="/">Danish serotype 15B capsular
+                                            polysaccharide (substance)</a></td>
+                                    <td class="nhsuk-table__cell "> </td>
+                                </tr>
+
+
 
                             </tbody>
-                          </table>
+                        </table>
+
+                        <nav aria-label="Pagination Navigation">
+                            <ul class="nhsuk-table-pagination" id="pagination">
+
+                                <li class="nhsuk-u-margin-right-3" id="linkFirst">&lt;&lt; first</li>
+
+                                <li id="linkPrevious">&lt; previous</li>
 
 
-                          <a class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-bottom-6" data-module="nhsuk-button" href="/tce-2226/all-ingredients" class="nhsuk-link">View all ingredients for this VTM</a>
+                                <li><span class="nhsuk-u-visually-hidden">Currently viewing </span><span
+                                        id="pageNumber">Page 1 of 3</span></li>
+
+
+                                <li id="linkNext"><a aria-label="Goto next page"
+                                        href="http://dmd-browser.nhsbsa.nhs.uk/vtm/view/69?ref=YW1wTmFtZT1hc3BpcmluJnNlYXJjaFR5cGU9VlRNJnNob3dJbnZhbGlkSXRlbXM9ZmFsc2UmaGlkZVBhcmFsbGVsSW1wb3J0PWZhbHNlJmhpZGVTcGVjaWFsT3JkZXI9ZmFsc2UmaGlkZURpc2NvbnRpbnVlZEl0ZW1zPWZhbHNl&amp;page=2">next
+                                        &gt;</a></li>
+
+                                <li id="linkLast" class="nhsuk-u-margin-left-3"><a aria-label="Goto last page"
+                                        href="http://dmd-browser.nhsbsa.nhs.uk/vtm/view/69?ref=YW1wTmFtZT1hc3BpcmluJnNlYXJjaFR5cGU9VlRNJnNob3dJbnZhbGlkSXRlbXM9ZmFsc2UmaGlkZVBhcmFsbGVsSW1wb3J0PWZhbHNlJmhpZGVTcGVjaWFsT3JkZXI9ZmFsc2UmaGlkZURpc2NvbnRpbnVlZEl0ZW1zPWZhbHNl&amp;page=3">last
+                                        &gt;&gt;</a></li>
+
+                            </ul>
+                        </nav>
+
+                        <!--a class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-bottom-6"
+                            data-module="nhsuk-button" href="/tce-2226/all-ingredients" class="nhsuk-link">View all
+                            ingredients for this VTM</a-->
 
 
                     </section>
