PartVIIIA from Part VIII A

--- a/templates/part-8a/confirm-changes-price-jump.html
+++ b/templates/part-8a/confirm-changes-price-jump.html
@@ -89,7 +89,7 @@
               Price difference warning
             </span>
           </h3>
-          <p><strong>Four</strong> products have increased by 10% or more. Review price changes</p>
+          <p><strong>Four</strong> products have changed by 10% or more. Review price changes</p>
         </div>
 
         <div>
