--- a/templates/part8-index.html
+++ b/templates/part8-index.html
@@ -27,8 +27,8 @@
           <div class="nhsuk-width-container">
             <div class="nhsuk-grid-row">
               <div class="nhsuk-grid-column-one-half nhsuk-section__content">
-                <h2 class="hero-margin-fix">Part VIII A</h2>
-                <p>Update prices for Part VIII A</p>
+                <h2 class="hero-margin-fix">Part VIIIA</h2>
+                <p>Update prices for Part VIIIA</p>
                 <div class="nhsuk-action-link">
                   <a class="nhsuk-action-link__link" href="/part-8a/index" id="product-search">
                     <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
@@ -40,8 +40,8 @@
                 </div>
               </div>
               <div class="nhsuk-grid-column-one-half nhsuk-section__content">
-                <h2>Part VIII-Cat M price updates</h2>
-                <p>Update Part VIII- Cat Mprices</p>
+                <h2>Part VIIIA-Cat M price updates</h2>
+                <p>Update Part VIIIA- Cat Mprices</p>
                 <div class="nhsuk-action-link">
                   <a class="nhsuk-action-link__link" href="/cat-m/index" id="code-search">
                     <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
