--- a/templates/part-8a/confirm-changes-price-jump.html
+++ b/templates/part-8a/confirm-changes-price-jump.html
@@ -90,6 +90,7 @@
             </span>
           </h3>
           <p><strong>Four</strong> products have changed by 10% or more. Review price changes</p>
+          <!--This appears whether it increases or decreses by 10% or more-->
         </div>
 
         <div>
