--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,8 @@
       <li><a href="/tce-2226/index">(TCE-2226)Adding VTM ingredients to dm+d browser</a></li>
       <li><a href="/part-8a/index">Updating prices for Part VIII A drugs</a></li>
       <li><a href="/cat-m/index">Updating prices for Cat M drugs via upload</a></li>
+      <li><a href="/user-designed-query/home-page">New UDQ </a></li>
+
     </ul>
   </div>
 </div>
