--- a/templates/tce-2384/vtm-display.html
+++ b/templates/tce-2384/vtm-display.html
@@ -567,7 +567,7 @@
                     
                     <div class="nhsuk-action-link" style="float: right">
                       
-                      <a class="nhsuk-action-link__link" href="/update/vtm?productId=69&amp;sectionToUpdate=vmps" id="action-link-update-vmps" aria-label="Link to update vmps">
+                      <a class="nhsuk-action-link__link" href="/tce-2384/update-ingredient" aria-label="Link to update ingredient">
                         <svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__arrow-right-circle" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                           <path d="M0 0h24v24H0z" fill="none"></path>
                           <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
@@ -597,7 +597,7 @@
                         <tr role="row" class="nhsuk-table__row">
                           <td role="cell" class="nhsuk-table__cell" id="vtm-vmp-name-value-0">
                             <span class="nhsuk-table-responsive__heading">Ingredient</span>
-                            <a href="#">Aspirin</a>
+                            <a href="/tce-2384/ingredient">Aspirin</a>
                           </td>
                           <td role="cell" class="nhsuk-table__cell nhsuk-u--table-date-width" id="vtm-vmp-start-date-value-0">
                             <span class="nhsuk-table-responsive__heading">Start date </span>
