--- a/templates/tce-2384/base.html
+++ b/templates/tce-2384/base.html
@@ -21,10 +21,10 @@
 
   <!-- Favicons -->
   <link rel="shortcut icon" href="/images/favicons/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="/images/favicons/apple-touch-icon-180x180.pn}">
+  <link rel="apple-touch-icon" href="/images/favicons/apple-touch-icon-180x180.png">
   <link rel="mask-icon" href="/images/favicons/favicon.svg" color="#005eb8">
   <link rel="icon" sizes="192x192" href="/images/favicons/favicon-192x192.png">
-  <meta name="msapplication-TileImage" content="/images/favicons/mediumtile-144x144.png}">
+  <meta name="msapplication-TileImage" content="/images/favicons/mediumtile-144x144.png">
   <meta name="msapplication-TileColor" content="#005eb8">
   <meta name="msapplication-square70x70logo" content="/images/favicons/smalltile-70x70.png">
   <meta name="msapplication-square150x150logo" content="/images/favicons/mediumtile-150x150.png">
@@ -50,7 +50,7 @@
   <a class="nhsuk-skip-link" href="#main-content">Skip to main content</a>
   <div class="nhsuk-width-container nhsuk-header__container">
     <div class="nhsuk-header__logo nhsuk-header__logo--only">
-      <a aria-label="DM+D browser homepage" class="nhsuk-header__link nhsuk-header__link--service" href="/trade-families">
+      <a aria-label="DM+D browser homepage" class="nhsuk-header__link nhsuk-header__link--service" href="/">
         <svg class="nhsuk-logo" xmlns="http://www.w3.org/2000/svg" role="img" focusable="false"
              viewBox="0 0 40 16" aria-labelledby="title">
           <title id="title">NHS Logo</title>
@@ -79,7 +79,7 @@
       </p>
       <ul class="nhsuk-header__navigation-list">
         <li class="nhsuk-header__navigation-item">
-          <a class="nhsuk-header__navigation-link" href="/trade-families/add-amp">
+          <a class="nhsuk-header__navigation-link" href="/">
             Name search
           </a>
         </li>
@@ -123,6 +123,8 @@
   {% block content %}{% endblock %}
   </main>
 </div>
+
+
 
 <footer role="contentinfo">
   <div class="nhsuk-footer" id="nhsuk-footer">
