ingredient sa ingredient search

--- a/templates/tce-2384/ingredient-search.html
+++ b/templates/tce-2384/ingredient-search.html
@@ -7,14 +7,14 @@
 
 <div>
   <ol class="nhsuk-breadcrumb__list">
-    <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/tce-2384/results">VTM
+    <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/tce-2384/ing-results">Ingredient
         results</a></li>
-    <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/tce-2384/not-valid/vtm-display">VTM: Arsenic</a>
+    <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="#">Ingredient: Aspirin</a>
     </li>
-    <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/tce-2384/not-valid/update-ingredient">Ingredient:
-        Arsenic</a></li>
+    <!--li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/tce-2384/update-ingredient">Ingredient:
+        Aspirin</a></li>
 
-    <!--li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="#">Level three</a></li-->
+    <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="#">Level three</a></li-->
 
   </ol>
 
@@ -28,7 +28,7 @@
   <div class="nhsuk-grid-row">
     <div id="content-pane" class="nhsuk-grid-column-full">
       <h1 class="nhsuk-heading-xl" id="pageHeading">
-        <span>Arsenic</span>
+        <span>Aspirin</span>
       </h1>
     </div>
   </div>
@@ -496,7 +496,7 @@
                     </td>
                     <td class="nhsuk-table__cell js-copy-to-clipboard" role="cell">
                       <span class="nhsuk-table-responsive__heading">Current name</span>
-                      <span id="names-table--current-name-value-current">Arsenic</span>
+                      <span id="names-table--current-name-value-current">Aspirin</span-->
                       <div aria-live="polite" class="nhsuk-u-visually-hidden">
                       </div>
                       <button id="copy-button-3" class="nhsuk-u-margin-left-2 nhsuk-u-margin-right-2"
@@ -507,7 +507,7 @@
                           viewBox="0 0 24 24" fill="none">
                           <title id="copy-function-3" lang="en">Select this to copy
                             Current name
-                            Arsenic
+                            Aspirin
                             to the clipboard</title>
                           <rect x="9" y="5" rx="1" ry="1" width="9" height="11"
                             style="fill:white;stroke:black; stroke-width:1;opacity:1"></rect>
@@ -560,7 +560,7 @@
 
               <!--div class="nhsuk-action-link" style="float: right">
   
-  <a class="nhsuk-action-link__link" href="/tce-2384/not-valid/vtm-display" id="action-link-update-name" aria-label="Link to update name">
+  <a class="nhsuk-action-link__link" href="/tce-2384/vtm-display" id="action-link-update-name" aria-label="Link to update name">
     <svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__arrow-right-circle" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path d="M0 0h24v24H0z" fill="none"></path>
       <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
@@ -612,7 +612,7 @@
                     </td>
                     <td class="nhsuk-table__cell js-copy-to-clipboard" role="cell">
                       <span class="nhsuk-table-responsive__heading">Current name</span>
-                      <span id="names-table--current-name-value-current">Arsenic</span>
+                      <a href="/tce-2384/vtm-display">Aspirin</a><!--span id="names-table--current-name-value-current">Aspirin</span-->
                       <div aria-live="polite" class="nhsuk-u-visually-hidden">
                       </div>
                       <button id="copy-button-3" class="nhsuk-u-margin-left-2 nhsuk-u-margin-right-2"
@@ -623,7 +623,7 @@
                           viewBox="0 0 24 24" fill="none">
                           <title id="copy-function-3" lang="en">Select this to copy
                             Current name
-                            Arsenic
+                            Aspirin
                             to the clipboard</title>
                           <rect x="9" y="5" rx="1" ry="1" width="9" height="11"
                             style="fill:white;stroke:black; stroke-width:1;opacity:1"></rect>
@@ -727,7 +727,7 @@
           style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;">
           <span id="sticky-footer-commodity-type">Ingredient: </span>
 
-          <span id="sticky-footer-product-name">Arsenic</span>
+          <span id="sticky-footer-product-name">Aspirin</span>
 
         </div>
 
