--- a/templates/tce-2384/not-valid/update-ingredient-changed.html
+++ b/templates/tce-2384/not-valid/update-ingredient-changed.html
@@ -29,7 +29,7 @@
           <span class="nhsuk-caption-l" id="update-associated-vmp-sub-heading">Update associated ingredient
             summary</span>
           <span class="nhsuk-u-visually-hidden"> - </span>
-          <h1 class="nhsuk-heading-xl" id="update-associated-vmp-heading">Aspirin</h1>
+          <h1 class="nhsuk-heading-xl" id="update-associated-vmp-heading">Arsenic</h1>
 
         </div>
       </div>
@@ -78,7 +78,7 @@
               </td>
               <td class="nhsuk-table__cell">
                 <span class="nhsuk-u-visually-hidden">Name</span>
-                <span id="associated-vmp-table--name-0">Aspirin</span>
+                <span id="associated-vmp-table--name-0">Arsenic</span>
               </td>
               <td class="nhsuk-table__cell nhsuk-u--table-date-width">
                 <span class="nhsuk-u-visually-hidden">Start date</span>
