--- a/templates/tce-2384/not-valid/update-ingredient-empty.html
+++ b/templates/tce-2384/not-valid/update-ingredient-empty.html
@@ -31,7 +31,7 @@
           <span class="nhsuk-u-visually-hidden">Important: </span>
           Warning
         </h3>
-        <p>No changes have been made for Aspirin.</p>
+        <p>No changes have been made for Arsenic.</p>
       </div>
       <form method="post">
         <input name="_csrf" value="IXFbsFLu6trTKPKfMsSWoeu052ROLcWp7EVz-9OSBj9-JXzcF0Nu1jDdi7_-HZeoAemikN7Wyl12TPyEiXNKw7aqMV1OQUzs" type="hidden">
