--- a/templates/tce-2384/not-valid/update-ingredient.html
+++ b/templates/tce-2384/not-valid/update-ingredient.html
@@ -10,7 +10,7 @@
   <ol class="nhsuk-breadcrumb__list">
     <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/tce-2384/results">VTM
         results</a></li>
-    <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/tce-2384/not-valid/vtm-display">VTM: Aspirin</a>
+    <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/tce-2384/not-valid/vtm-display">VTM: Arsenic</a>
     </li>
     <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/tce-2384/not-valid/update-ingredient">Update Associated
         Ingredients</a></li>
@@ -34,7 +34,7 @@
 
             <span class="nhsuk-caption-l" id="update-associated-vmps-sub-heading">Update associated ingredients</span>
             <span class="nhsuk-u-visually-hidden"> - </span>
-            <h1 class="nhsuk-heading-xl" id="update-associated-vmps-heading">Aspirin</h1>
+            <h1 class="nhsuk-heading-xl" id="update-associated-vmps-heading">Arsenic</h1>
 
           </div>
           <div class="nhsuk-grid-column-one-third">
@@ -55,9 +55,9 @@
             <div class="nhsuk-grid-column-one-quarter update-side-bar hide-mobile">
               <h2 class="nhsuk-heading-l nhsuk-u-visually-hidden">Navigation</h2>
               <ul class="nhsuk-list list-room-for-top-btn">
-                <li><a href="#vmp-0-legend-value">Aspirin</a></li>
+                <li><a href="#vmp-0-legend-value">Arsenic</a></li>
                 <li><a href="#vmp-1-legend-value">Paracetamol</a></li>
-                <!--li><a href="#vmp-2-legend-value">Aspirin 100mg/5ml oral solution</a></li-->
+                <!--li><a href="#vmp-2-legend-value">Arsenic 100mg/5ml oral solution</a></li-->
 
 
 
@@ -73,7 +73,7 @@
 
                   <fieldset class="nhsuk-fieldset">
                     <legend id="vmp-0-legend-value" class="nhsuk-fieldset__legend--l update-general-heading">
-                      Aspirin</legend>
+                      Arsenic</legend>
                     <input class="nhsuk-input" type="hidden" id="values0.id" name="values[0].id" value="6523">
 
                     <!--Start Date-->
