--- a/templates/tce-2384/not-valid/update-ingredient copy.html
+++ b/templates/tce-2384/not-valid/update-ingredient copy.html
@@ -10,7 +10,7 @@
   <ol class="nhsuk-breadcrumb__list">
     <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/tce-2384/results">VTM
         results</a></li>
-    <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/tce-2384/not-valid/vtm-display">VTM: Aspirin</a></li>
+    <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/tce-2384/not-valid/vtm-display">VTM: Arsenic</a></li>
     <li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="/tce-2384/not-valid/update-ingredient">Associated Ingredients</a></li>
 
     <!--li class="nhsuk-breadcrumb__item"><a class="nhsuk-breadcrumb__link" href="#">Level three</a></li-->
@@ -32,7 +32,7 @@
 
             <span class="nhsuk-caption-l" id="update-associated-vmps-sub-heading">Update associated ingredients</span>
             <span class="nhsuk-u-visually-hidden"> - </span>
-            <h1 class="nhsuk-heading-xl" id="update-associated-vmps-heading">Aspirin</h1>
+            <h1 class="nhsuk-heading-xl" id="update-associated-vmps-heading">Arsenic</h1>
 
           </div>
           <div class="nhsuk-grid-column-one-third">
@@ -53,8 +53,8 @@
               <h2 class="nhsuk-heading-l nhsuk-u-visually-hidden">Navigation</h2>
               <ul class="nhsuk-list list-room-for-top-btn">
                 <li><a href="#vmp-0-legend-value">Acetylsalicylic acid mixture</a></li>
-                <li><a href="#vmp-1-legend-value">Aspirin 100mg capsules</a></li>
-                <!--li><a href="#vmp-2-legend-value">Aspirin 100mg/5ml oral solution</a></li-->
+                <li><a href="#vmp-1-legend-value">Arsenic 100mg capsules</a></li>
+                <!--li><a href="#vmp-2-legend-value">Arsenic 100mg/5ml oral solution</a></li-->
 
 
 
@@ -289,7 +289,7 @@
   <section id="vmp-1">
 
     <fieldset class="nhsuk-fieldset">
-      <legend id="vmp-1-legend-value" class="nhsuk-fieldset__legend--l update-general-heading">Aspirin
+      <legend id="vmp-1-legend-value" class="nhsuk-fieldset__legend--l update-general-heading">Arsenic
         100mg capsules</legend>
       <input class="nhsuk-input" type="hidden" id="values1.id" name="values[1].id" value="19936">
 
